feat(navbar): added sections

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -9,6 +9,7 @@
     --background-primary: #2B2D31;
     --border-primary: #4B4D51;
     --text-primary: #E0E0E0;
+    --brand: #048BA8;
 
     /*  */
 }
